# SkyPro_Electronics_Store

./: .coverage  main.py  pyproject.toml
tests/: test_main.py
