[tool.poetry]
name = "skypro-electroics-store-poetry"
version = "0.1.0"
description = ""
authors = ["uwaga <puvir00@gmail.com>"]
readme = "README.md"
packages = [{include = "skypro_electroics_store_poetry"}]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
